# mdvc-status

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json
src/: main.rs
