[package]
name = "mdvc-status"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
